kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: tournaments.ru
      http:
        paths:
          - pathType: Prefix
            path: "/api/v1/users"
            backend:
              service:
                name: user-service
                port:
                  number: 8020

          - pathType: Prefix
            path: "/api/v1/teams"
            backend:
              service:
                name: team-service
                port:
                  number: 8030
